 2014-08-25 14:04  alexpeshkoff 
   M examples/dbcrypt/DbCrypt.cpp
Make a dbCrypt sample a little more interesting

 2014-08-25 13:28  dimitr 
   M src/jrd/Optimizer.cpp
Fixed CORE-4530: DB_KEY based join of two tables may be ineffective.

 2014-08-25 11:35  dimitr 
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/jrd/opt.cpp
Attempt for CORE-4528: Allow hash/merge joins for non-field (dbkey or derived expression) equalities.

 2014-08-21 08:00  alexpeshkoff 
   M src/jrd/Mapping.cpp
Explicitly avoid processing records about already seen databases when mapping auth info

 2014-08-20 10:07  alexpeshkoff 
   M src/common/ThreadStart.cpp
   M src/common/ThreadStart.h
Fixed non-linux posix builds

 2014-08-20 09:26  alexpeshkoff 
   M src/gpre/obj_cxx.cpp
Postfix for CORE-4506: forgotten to release request

 2014-08-19 09:53  alexpeshkoff 
   M src/gpre/obj_cxx.cpp
Fixed CORE-4506: Firebird server crashes when execute most of "show ..." commands after reconnect

 2014-08-17 04:17  robocop 
   M src/common/classes/array.h
Misc.

 2014-08-17 03:52  robocop 
   M src/yvalve/why.cpp
I assume this is a bug.

 2014-08-15 15:37  alexpeshkoff 
   M src/yvalve/YObjects.h
   M src/yvalve/why.cpp
Clear handle in JBlob when blob is destroyed

 2014-08-15 15:00  dimitr 
   M configure.ac
Corrections for the prior commit:Explicitly distinguish between thread handle and thread id. Return LWP as thread id on Linux.

 2014-08-15 14:59  dimitr 
   M src/common/ThreadStart.cpp
   M src/common/ThreadStart.h
   M src/jrd/CryptoManager.h
   M src/jrd/Mapping.cpp
   M src/jrd/jrd.cpp
   M src/remote/remote.h
   M src/yvalve/MasterImplementation.cpp
   M src/yvalve/utl.cpp
   M src/yvalve/why.cpp
Corrections for the prior commit:Explicitly distinguish between thread handle and thread id. Return LWP as thread id on Linux.

 2014-08-15 14:20  dimitr 
   M builds/mac_os_x/CS/CS.pbproj/project.pbxproj
   M builds/win32/msvc10/common.vcxproj